--- a/estilos.css
+++ b/estilos.css
@@ -42,3 +42,13 @@ h1{
     color: black;
     text-align: justify;
 }
+
+.button{
+background-color: gray;
+}
+
+.button:hover{
+    background-color: aliceblue;
+    width: 140px;
+    transform: rotate(25deg) translate(180px);
+}
